@@ -4,6 +4,9 @@ xxx xxx xx xx:xx:xx UTC 2010
 
         Changes
 
+        - The 'setup' command now creates a new internal database if no
+          database is given either as command line or workspace option.
+
         New features
 
         - New automation command 'update' which behaves identical to
